[project]
name = "photo-assistant"
version = "0.1.0"
description = "Assistant app for generating image tags and captions. Will also answer some FAQs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deptry>=0.24.0",
    "google-cloud-vision>=3.11.0",
    "openai>=2.8.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
